--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: php
 
 php:
+  - 5.4
+  - 5.5
   - 5.6
   - 7.0
   - hhvm
 
 matrix:
   allow_failures:
+    - php: 5.4
+    - php: 5.5
     - php: 7.0
     - php: hhvm
 
@@ -23,4 +27,3 @@ script:
 
 notifications:
   email: false
-
